# qgis-cpp-plugin-r

./: .gitignore  CMakeLists.txt  README.md  clang-format.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: test-windows.yml
cmake/: FindQGIS.cmake  FindR.cmake  FindRCpp.cmake  FindRInside.cmake
docker/: Dockerfile
src/: CMakeLists.txt  maplayerwrapper.cpp  maplayerwrapper.h  pluginres.qrc  qgisapplicationrwrapper.h  qgsdockablewidgethelper.cpp  qgsdockablewidgethelper.h  qgsinteractiverwidget.cpp  qgsinteractiverwidget.h  qgsrstatsapplicationwrapper.cpp  qgsrstatsapplicationwrapper.h  qgsrstatsconsole.cpp  qgsrstatsconsole.h  qgsrstatsfunctions.cpp  qgsrstatsfunctions.h  qgsrstatsmaplayerwrapper.cpp  qgsrstatsmaplayerwrapper.h  qgsrstatsrunner.cpp  qgsrstatsrunner.h  qgsrstatssession.cpp  qgsrstatssession.h  qgsrstatssettings.cpp  qgsrstatssettings.h  qgsrstatsutils.cpp  qgsrstatsutils.h  rinteractingfunctions.cpp  rinteractingfunctions.h  rplugin.cpp  rplugin.h  rstatsession.cpp  rstatsession.h  rstatsrunner.cpp  rstatsrunner.h  scopedprogresstask.cpp  scopedprogresstask.h
src/gui/: interactiverwidget.cpp  interactiverwidget.h  rsettingsdialog.cpp  rsettingsdialog.h  rstatsconsole.cpp  rstatsconsole.h
